// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should match enzyme shallow snapshot 1`] = `
<button
  disabled={false}
  href=""
  onClick={[Function]}
  style={
    Object {
      "textDecoration": undefined,
    }
  }
  type="button"
>
  Test 1
</button>
`;

exports[`Link should match enzyme shallow snapshot 2`] = `
<button
  disabled={true}
  href=""
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "underline",
    }
  }
  type="button"
>
  Test 1
</button>
`;
